src/components/Header/MobileNav/index.module.scss
@use '@scss/common.scss' as *;

.mobileNav {
  display: none;
  visibility: hidden;

  @include mobile-header-break {
    display: block;
    visibility: visible;
  }
}

.logo {
  position: relative;
  top: -2px;
}

.menuBarContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.icons {
  display: flex;
  align-items: center;
}

.cloudNewProject {
  display: flex;
  align-items: center;

  > * {
    text-decoration: none;
    margin-right: var(--base);
    line-height: 1;
  }

  & > *:last-child {
    margin-right: 0;
  }

  @include small-break {
    display: none;
    visibility: hidden;
  }
}

.mobileAvatar {
  @include mobile-header-break {
    margin-left: var(--base);
  }
}

.searchToggler {
  all: unset;
  cursor: pointer;
  margin-right: calc(var(--base) *  .5);
}

.modalToggler {
  all: unset;
  cursor: pointer;
  margin-left: var(--base);
}

.modalBlur {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--color-base-900);
  opacity: .85;
  z-index: -1;
}

.mobileMenuModal {
  all: unset;
  width: 100%;
  height: 100%;
  padding-top: calc(var(--header-height) * 1.5);
  backdrop-filter: blur(5px);
  display: none;
  visibility: hidden;

  @include mobile-header-break {
    display: block;
    visibility: visible;
  }
}

.mobileMenuItems {
  display: flex;
  flex-direction: column;
  padding: calc(var(--base) *  1.5) 0;

  @include mobile-header-break {
    gap: calc(var(--base) * 1.25);
  }
}

.mobileMenuItem {
  @include h3;
  margin: 0;
  font-weight: bold;
  text-decoration: none;

  @include small-break {
    @include h2;
  }
  
  @include mobile-header-break {
    margin: 0;
    color: var(--color-base-0);
  }
}

.newProject {
  @include small-break {
    display: none;
  }
}

.discord {
  display: flex;

  svg {
    @include large-break {
      width: calc(var(--base) * 2.25);
      height: 48px;
    }

    @include mid-break {
      width: calc(var(--base) * 2);
      height: 40px;
    }

    @include small-break {
      width: calc(var(--base) * 1.5);
      height: 32px;
    }
  }
}

